src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__aliased_import.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected identifier, found type identifier", span: Span { start: 32, end: 35, start_line: 1, start_col: 33 }, labels: [], suggestions: [], source_file: None, source_content: None }]
