src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__array_literal.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Array(
                                    List(
                                        [
                                            Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 1,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 10,
                                                            end: 11,
                                                            start_line: 1,
                                                            start_col: 11,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 10,
                                                    end: 11,
                                                    start_line: 1,
                                                    start_col: 11,
                                                },
                                            },
                                            Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 2,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 13,
                                                            end: 14,
                                                            start_line: 1,
                                                            start_col: 14,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 13,
                                                    end: 14,
                                                    start_line: 1,
                                                    start_col: 14,
                                                },
                                            },
                                            Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 3,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 16,
                                                            end: 17,
                                                            start_line: 1,
                                                            start_col: 17,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 16,
                                                    end: 17,
                                                    start_line: 1,
                                                    start_col: 17,
                                                },
                                            },
                                            Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 4,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 19,
                                                            end: 20,
                                                            start_line: 1,
                                                            start_col: 20,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 19,
                                                    end: 20,
                                                    start_line: 1,
                                                    start_col: 20,
                                                },
                                            },
                                            Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 5,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 22,
                                                            end: 23,
                                                            start_line: 1,
                                                            start_col: 23,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 22,
                                                    end: 23,
                                                    start_line: 1,
                                                    start_col: 23,
                                                },
                                            },
                                        ],
                                    ),
                                ),
                                span: Span {
                                    start: 9,
                                    end: 24,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 26,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 26,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 26,
        start_line: 1,
        start_col: 1,
    },
}
